@@ -504,8 +504,7 @@ class LXD(Backend):
              "/etc/systemd/system/snapd.refresh.timer"])
 
     def run(self, args, cwd=None, env=None, input_text=None, get_output=False,
-            echo=False, return_process=False, universal_newlines=True,
-            **kwargs):
+            echo=False, return_process=False, **kwargs):
         """See `Backend`."""
         env_params = []
         if env:
@@ -538,9 +537,7 @@ class LXD(Backend):
         else:
             if get_output:
                 kwargs["stdout"] = subprocess.PIPE
-            proc = subprocess.Popen(
-                cmd, stdin=subprocess.PIPE,
-                universal_newlines=universal_newlines, **kwargs)
+            proc = subprocess.Popen(cmd, stdin=subprocess.PIPE, **kwargs)
             if return_process:
                 return proc
             output, _ = proc.communicate(input_text)
@@ -549,7 +546,10 @@ class LXD(Backend):
             if get_output:
                 if echo:
                     print("Output:")
-                    print(output)
+                    output_text = output
+                    if isinstance(output_text, bytes):
+                        output_text = output_text.decode("UTF-8", "replace")
+                    print(output_text)
                 return output
 
     def copy_in(self, source_path, target_path):
